# fast_point_in_polygon_for_glsl

./: Cargo.toml  README.md  rustfmt.toml
src/: frag_after.glsl  frag_before.glsl  lib.rs  main.rs  vertex.glsl
